--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "bkp":"strapi export"
   },
   "devDependencies": {},
   "dependencies": {
     "@_sh/strapi-plugin-ckeditor": "^2.0.0",
     "@ckeditor/ckeditor5-markdown-gfm": "^36.0.0",
-    "@strapi/strapi": "4.6.1",
-    "@strapi/plugin-users-permissions": "4.6.1",
     "@strapi/plugin-i18n": "4.6.1",
-    "better-sqlite3": "7.4.6"
+    "@strapi/plugin-users-permissions": "4.6.1",
+    "@strapi/strapi": "4.6.1",
+    "better-sqlite3": "7.4.6",
+    "strapi-plugin-import-export-entries": "^1.18.1"
   },
   "author": {
     "name": "A Strapi developer"
